# energy-explorer

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: CA-Energy-Storage.pptx  Steel-Industry-Data-Exploration.pptx  column_descriptions.md  description.md
energy_explorer/: es_explorer.py  objects.py  paths.py  plotters.py  power_explorer.py  readers.py
notebook/: __init__.py  chart_fuel_types.py  clean_dataframe.py  map_energy_storage.py  power_explorer.py  run_capacity_series.py  run_correlations.py  run_similarity.py
